--- a/views/trans.ejs
+++ b/views/trans.ejs
@@ -15,7 +15,7 @@
 <body>
     <div class="cont">
         <h1 class="text-dark mx-auto text-center" style="margin:0px;">Welcome to Translator</h1>
-        <form action="/trans" method="post" id="form">
+        <form action="/" method="post" id="form">
             <div>
                 <label for="conv">Type Here</label>
                 <textarea name="convert" id="conv" class="form-control  border-success"><%= convert %> </textarea>
