--- a/public/style.css
+++ b/public/style.css
@@ -1,27 +1,43 @@
  body {
             max-height: 100vh;
-            background-color:rgba(137, 221, 255, 0.521)
-        }
+            background-color:#0E0B16;
+    }
 
-        #submits {
-            width: 9.5rem;
-        }
+#submits 
+    {
+    width: 9.5rem;
+    }
+label{
+    color: #E7DFDD;
+    font-size: 2vmax;
+}
+h1{
+margin: 0px;
+color: rgb(250, 241, 120);    
+}
+#swap{
+        background-color: #abfd99;
+}
+#swap:hover{
+    background-color: rgb(243, 210, 166);
 
-        #form {
-            width: 100%;
-            max-width: 100%;
-            height: 35rem;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            align-items: center;
-        }
+}
+#form {
+        width: 100%;
+        max-width: 100%;
+        height: 35rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
 
         #conv {
             width: 42rem;
             height: 12rem;
             font-family: monospace;
             font-size: 1.3rem;
+            box-shadow: 4px 3px 3px rgb(163, 243, 161);
         }
 
         #ans {
@@ -29,6 +45,7 @@
             height: 12rem;
             font-family: monospace;
             font-size: 1.3rem;
+            box-shadow: 4px 3px 3px rgb(17 100 16);
         }
 
         .controls {
@@ -47,17 +64,24 @@
             width: 200px;
             height: 40px;
         }
+#submits:hover{
 
-        @media(max-width:750px) {
-
-            #ans,
-            #conv {
-                width: 84vmin;
-                ;
+    background-color: rgb(172, 92, 0);
+    box-shadow: 20px;
+}
+#langToConvert{
+    border-radius: 5%; 
+    width: 150px;background-color: 
+    rgb(233, 248, 243);
+    color: black;
+}
+@media(max-width:750px) {
+        #ans,#conv {
+            width: 84vmin;
             }
         }
 
-        @media(max-width:385px) {
+@media(max-width:385px) {
             .controls {
                 flex-direction: column;
                 align-items: center;
@@ -65,6 +89,12 @@
 #speak{
     margin-top: 5px;
     margin-bottom: 5px;
-
 }
-        }
+}
+@media(max-width:295px) {
+        #langToConvert{
+    padding: 0px;
+    width: 120px;
+    height: 40px;
+}
+}
