--- a/views/trans.ejs
+++ b/views/trans.ejs
@@ -140,7 +140,7 @@
             <button type="submit" class="btn btn-primary" id="submits">Translate</button>
         </form>
         <div class="controls">
-            <audio src="" controls hidden type="audio/bs4">
+            <audio src="" controls hidden type="audio/mpeg">
             </audio>
             <button class=" btn btn-success" id="speak">Voice</button>
             <button type="submit" class="btn btn-warning" id="clear">Clear</button>
